# hopen

./: .gitignore  Cargo.toml  Logo.md  README.md  README.zh-CN.md  build.rs
core-go/: common.go  go.mod  go.sum  hub.go
crates/hopen/: Cargo.toml
crates/hopen/src/: lib.rs  main.rs
crates/hopen/src/components/: button.rs
crates/ui/: Cargo.toml
crates/ui/src/: button.rs  label.rs  lib.rs
src/: app.rs  assets.rs  components.rs  main.rs  main_view.rs  navigation.rs  theme.rs
src/components/: animated_grid.rs  bottom_sheet.rs  button.rs  card.rs  charts.rs  dialog.rs  grid.rs  input.rs  mod.rs  open_container.rs  search_input_field.rs  side_sheet.rs  sidebar.rs  text_input.rs  titlebar.rs  toast.rs  virtual_list.rs
src/core/: action.rs  bridge.rs  event.rs  manager.rs  mod.rs  service.rs  transport.rs
src/i18n/: mod.rs
src/persistence/: dao.rs  db.rs  mod.rs  models.rs  preferences.rs
src/platform/: admin.rs  autostart.rs  mod.rs  proxy.rs  tray.rs
src/state/: config.rs  connection.rs  log.rs  mod.rs  proxy.rs  proxy_models.rs
src/views/: connections.rs  dashboard.rs  logs.rs  mod.rs  placeholders.rs  profiles.rs  proxies.rs  requests.rs  resources.rs  search_input.rs  settings.rs  shared.rs
