[package]
name = "hopen-gpui"
version = "0.1.0"
edition = "2024"
description = "Hopen - A multi-platform proxy client built with GPUI"
license = "GPL-3.0"

[dependencies]
gpui = "*"
anyhow = "1"
sys-locale = "0.3"
interprocess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
sled = "0.34"
sha2 = "0.10"
md-5 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
