[package]
name = "hopen"
version = "0.1.0"
edition = "2021"
description = "A multi-platform open-source VPN client."  
license = "GPL-3.0-or-later"
authors = ["zhangfuxing"]

[[bin]]
name = "hopen"
path = "src/main.rs"

[dependencies]
ui.workspace = true
gpui.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
